--- a/scripts/css/style.css
+++ b/scripts/css/style.css
@@ -1,6 +1,37 @@
 body{  
-    background-color: #1affff;
     background: url('../../images/ocean.png');
     background-repeat: no-repeat;
     background-size:cover
 }
+
+h1 { 
+ opacity: 1; 
+ color: blue; 
+}
+
+
+
+ .box{
+     opacity: .25;
+ }
+ 
+#box1 { 
+    position: relative;
+    height: 80%; 
+    width: 80%; 
+    background-color: rgb(255, 0, 0); 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
+
+}
+
+
+#box2 { 
+    position: absolute;
+    height: 100%; 
+    width: 25%; 
+    background-color: pink; 
+    top: 0; 
+}
+
