--- a/scripts/css/style.css
+++ b/scripts/css/style.css
@@ -9,7 +9,7 @@ ul.ulnav{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:fuchsia;
+    background-color:neon greenyellow;
 }
 li.linav{
     float:left;
@@ -31,4 +31,26 @@ li.linav a.active{
 li.linav a:hover{
     background-color: burlywood;
     
+}
+span.subtitle{
+    font-size: 10pt;
+    color: lightsalmon;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+span.maintitle{
+    font-size: 20pt;
+    color: orangered;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+a.nav{
+    font-size: 8pt;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
+}
+a.nav:hover{
+    font-size: 10pt;
+    color: rgb(222, 247, 6);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-decoration: none;
 }
